<resources>
    <string name="app_name">QBlog</string>
    <string name="action_settings">Settings</string>
    <string name="hint_login_username">起个响亮的昵称</string>
    <string name="hint_login_phone">请输入手机号码</string>
    <string name="hint_login_password">输入密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>
    <string name="neterrormsg">网络错误，请稍后再试</string>
    <string name="no_login">请登录后再操作</string>
</resources>
